# github-issues-notion-sync

./: .gitignore  Dockerfile  README.md  action.yml  pyproject.toml  requirements.txt  schema.json
app/: main.py
